package v62.lp;
import "sys/Common.proto";
import "v62/FPTData.proto";

option java_package = "nirvana.hall.protocol.v62.lp";
option java_outer_classname = "CaseGetProto";

//查询案件
message CaseGetRequest{
    extend sys.BaseRequest{
        optional CaseGetRequest cmd = 9005;
    }
    required string case_id = 1;
}

message CaseGetResponse{
    extend sys.BaseResponse{
        optional CaseGetResponse cmd = 9005;
    }
    optional Case case = 1;
}